Change bigfoot zip file from file location to url
The zip file for the Power BI report done for the big foot sightings project was too large to upload on GitHub. I instead used the url of the file on my portfolio hosted on another site.

--- a/projects.html
+++ b/projects.html
@@ -508,7 +508,7 @@
           however.
         </p>
 
-        <a class="big-button" href="./projects/Project 3/Big Foot Sightings Power BI File and Data.zip" download>
+        <a class="big-button" href="https://portfolio-713.s3.us-east-2.amazonaws.com/Data+Analyst+Portfolio/projects/Project%203/Big%20Foot%20Sightings%20Power%20BI%20File%20and%20Data.zip" download>
           <i class='bx bxs-download'></i> Bigfoot Sightings.zip
         </a>
 				
@@ -718,4 +718,5 @@
     <script src="./scripts/utils/sliding.js"></script>
     <script src="./scripts/projects.js"></script>
   </body>
+
 </html>
