Changed file path of resume in index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <img src="./images/my-picture.jpg" alt="Picture of Isaac Ruano" id="my-picture">
         </section>
         <br>
-        <a class="big-button" href="./other-resources/Data Analyst Resume - 2024 October 31 - Isaac Ruano.pdf" download>
+        <a class="big-button" href="./other-resources/Data Resume - Isaac Ruano - 08312025.pdf" download>
           <i class='bx bxs-download'></i> Download Resume
         </a>
     </main>
@@ -88,4 +88,5 @@
     <script src="./scripts/utils/tableOfContents.js"></script>
     <script src="./scripts/index.js"></script>
     </body>
+
 </html>
