Update short bio in index.html

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         <section id="about-me" class="paper-div minimal-space">
           <div id="self-intro" class="clean-padding">
             <p>
-              Hello! I'm a recent graduate in statistics with a passion for
-              data. I'm excited to have to opportunity to share the projects
-              I've worked on with various programs and analysis techniques
-              here.
+              Hello! I'm a graduate student in data science waiting for my
+              opportunity to break into the field of data. I'm excited to
+              have the opportunity to share the projects I've worked on in
+              my classes and on my own using various programs and analaysis
+              techniques.
             </p>
             <div id="socials">
               <p><i class='bx bxs-location-plus'></i> Norfolk, Virginia</p>
@@ -90,3 +91,4 @@
     </body>
 
 </html>
+
