Update education.html to include my in progress master's

--- a/education.html
+++ b/education.html
@@ -40,6 +40,22 @@
                   <embed src="./images/icons/graduation cap icon.svg" alt="School" class="cap-icon"></embed>
                   <i>Old Dominion University</i>
                 </p>
+                <p><b>Master of Science</b> (In Progress)</p>
+                <p><b>Major</b>: Data Science</p>
+                <p><b>Concentration</b>: Machine Learning and AI</p>
+              </div>
+              <div class="degree-div-right">
+                <p class="empty-p"></p>
+                <p>August 2025 - May 2027</p>
+              </div>
+            </div>
+            <br><br>
+            <div class="degree-div">
+              <div class="degree-div-left">
+                <p>
+                  <embed src="./images/icons/graduation cap icon.svg" alt="School" class="cap-icon"></embed>
+                  <i>Old Dominion University</i>
+                </p>
                 <p><b>Bachelor of Science</b></p>
                 <p><b>Major</b>: Statistics</p>
                 <p><b>GPA</b>: 3.99</p>
@@ -222,4 +238,5 @@
     </footer>
     <script src="./scripts/education.js"></script>
   </body>
+
 </html>
