Update index.html to remove data analyst header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <h1>Isaac Ruano</h1>
-        <h2 class="center">Data Analyst</h2>
+<!--         <h2 class="center">Data Scientist</h2> -->
         <section id="about-me" class="paper-div minimal-space">
           <div id="self-intro" class="clean-padding">
             <p>
@@ -91,4 +91,5 @@
     </body>
 
 </html>
+
 
